<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/SubTitleGridSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/dimensions"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <RadioGroup
        android:id="@+id/ChooseGridSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SubTitleGridSize"
        tools:ignore="HardcodedText">

        <RadioButton
            android:id="@+id/radBtn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="3dp"
            android:text="4x4"
            android:textSize="16sp"
            android:checked="true"
            android:onClick="gridSizeSelect"/>

        <RadioButton
            android:id="@+id/radBtn6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:paddingHorizontal="3dp"
            android:text="6x6"
            android:textSize="16sp"
            android:onClick="gridSizeSelect"/>

        <RadioButton
            android:id="@+id/radBtn9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="3dp"
            android:text="9x9"
            android:textSize="16sp"
            android:onClick="gridSizeSelect"/>
    </RadioGroup>

    <TextView
        android:id="@+id/SubTitleChooseDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/difficulty"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ChooseGridSize" />

    <SeekBar
        android:id="@+id/barDIfficulty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@+id/ChooseGridSize"
        app:layout_constraintStart_toStartOf="@+id/ChooseGridSize"
        app:layout_constraintTop_toBottomOf="@+id/SubTitleChooseDifficulty" />

    <LinearLayout
        android:id="@+id/DifficultyList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/barDIfficulty"
        app:layout_constraintStart_toStartOf="@+id/barDIfficulty"
        app:layout_constraintTop_toBottomOf="@+id/barDIfficulty">

        <TextView
            android:id="@+id/Easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/easy" />

        <TextView
            android:id="@+id/Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/normal" />

        <TextView
            android:id="@+id/Hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/hard" />
    </LinearLayout>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DifficultyList" />

    <TextView
        android:id="@+id/SubTitleSolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/solution"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart" />

    <Button
        android:id="@+id/btnSolve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/solve"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SubTitleSolver" />
</androidx.constraintlayout.widget.ConstraintLayout>